--- a/icon.html
+++ b/icon.html
@@ -4,13 +4,14 @@
 <title>choose</title>
 </head>
 <body>
-<img id="countgif" src=""/>
+<div>
+<img id="countgif" src="photo/countdown.gif"/>
 <div id="blank"></div>
 <div id="icons1">
 <a href="cabinet.html"><img class="icons" src="photo/1-1.png"/></a>
 <a href="lamp.html"><img class="icons" src="photo/2-1.png"/></a>
 <a href="sofa.html"><img class="icons" src="photo/3-1.png"/></a>
 <a href="bed.html"><img class="icons" src="photo/4-1.png"/></a>
-</div>
+</div></div>
 </body>
 </html>
