--- a/bed.html
+++ b/bed.html
@@ -2,16 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
+
+<title>Bed</title>
 <link href="furniture.css" rel="stylesheet" type="text/css">
-<title>Sofa</title>
+
 </head>
 <body>
-
 <div id="navbar1">
 <a href="index.html">"<img id="logo" src="photo/logo.png"/></a>
 </div>
  <div id="content">
- <img id="product" src="photo/3-3.jpg"/>
+ <img id="product" src="photo/4-3.jpg"/>
 </div> 
 <footer>
 <a id="more" href="#">more</a> 
