--- a/lamp.html
+++ b/lamp.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 <link href="furniture.css" rel="stylesheet" type="text/css">
 <title>Lamp</title>
 </head>
 <body>
-
 <div id="navbar1">
 <a href="index.html">"<img id="logo" src="photo/logo.png"/></a>
 </div>
@@ -19,5 +20,6 @@
 <a href="sofa.html"><img class="icons" src="photo/3-1.png"/></a>
 <a href="bed.html"><img class="icons" src="photo/4-1.png"/></a>
 </div>
+</footer>
 </body>
 </html>
