--- a/icon.html
+++ b/icon.html
@@ -1,6 +1,8 @@
+<! DOCTYPE html>
 <html>
-<head>
-<link href="icon.css" rel="stylesheet" type="text/css">
+  <head>
+  <meta charset="utf-8">
+    <link href="icon.css" rel="stylesheet" type="text/css">
 <title>choose</title>
 </head>
 <body>
