--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 <link href="index.css" rel="stylesheet" type="text/css">
-<title>HOME</title>
+<title>home</title>
 </head>
 <body>
-  <div id="wrappe">'
-  <img id="logo" src="./photo/logo.png"/>
-  <a href ="icon.html">click here</a>
-  <img id="arrow" src="./photo/arrow.png"/>
+<div id="wrapper">
+<img id="logo" src="photo/logo.png"/>
+<a href="icon.html">click here</a>
+<img id="arrow" src="photo/arrow.png"/>
 </div>
 </body>
 </html>
